[project]
name = "job-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "tox>=4.28.0",
]

[tool.ruff]
line-length = 95
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
